# stock-recommendation-skill

./: .dockerignore  .gitignore  README.md  SKILL.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py  services.py
backend/app/api/: backtest.py  health.py  market_flow.py  recommendations.py  stocks.py
backend/app/backtest/: __init__.py  engine.py
backend/app/data/: __init__.py  akshare_daily_provider.py  akshare_provider.py  baostock_provider.py  provider.py  recommendation_repository.py  repository.py
backend/tests/: test_akshare_provider.py  test_api.py  test_engine.py  test_publish_recommendations.py  test_recommendations_api.py  test_services.py
docs/: backtest-methodology.md  docker-windows.md  quant-backend.md  recommendation-sessions.md
docs/plans/: 2026-07-14-quant-platform-plan.md
examples/: sample_input.json
nginx/: default.conf
references/: data-schema.md
scripts/: capture_analysis.py  create_demo_session.py  pack_recommendations.py  publish_recommendations.py  render_gui.py  start-docker.ps1  text_io.py
templates/: dashboard.html  orbit-3d-web.html  quant-dashboard.html  workbench.html
tests/: test_encoding.py
