[project]
name = "stock-recommendation-quant-backend"
version = "0.4.0"
description = "A-share charting and backtest backend for stock-recommendation-gui"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "duckdb>=1.0,<2",
  "baostock>=0.8,<1",
]

[project.optional-dependencies]
market-flow = ["akshare>=1.16,<2", "pandas>=2.2,<3"]

[dependency-groups]
dev = ["pytest>=8,<9", "httpx>=0.27,<1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
